# gsom-idionomic

./: .gitignore  CITATION.cff  CLAUDE.md  GSOM_Idionomic_Colab.ipynb  LICENSE  README.md  app.py  index.html  netlify.toml  pyproject.toml  requirements.txt
.streamlit/: config.toml
gsom_idionomic/: __init__.py  _zoo_data.py  demo.py  gsom.py  pipeline.py  plots.py
paper/: README.md
sample_data/: README.md  sample_feature_matrix.csv  zoo_classes.csv  zoo_feature_matrix.csv
tests/: test_app_flow.py  test_sample_recovery.py
